	* Properly set the initial properties of the reference line like line width, etc. (Issue #580)
	* Properly show the initial value of the property "visible" for the reference range (Issue #582)
	* React of Delete and Backspace keys to delete selected cells in spreadsheet columns (Issue #596)
	* Update the plot legend on column name changes used in box and bar plots (Issue #597)

-----2.10.0 (21.03.2023) -----
New features:
	* [worksheet]
		* Bar plots
		* Plot templates - allow to save and re-use custom plot configurations
		* Histogram
			* Error bars (Possion sqrt(N) error or values from custom columns)
			* Rug plots
		* Box Plot
			* Rug plots
			* Symbols for whisker end points
			* Allow to modify box properties (color, etc.) for every data set independently of each other
			* Draw a legend item for every dataset in the box plot
		* Reference Range - custom area on the plot to highlight a certain x- or y-range
		* Show LaTeX error messages in text labels when rendering with LaTeX
	* [spreadsheet]
		* Use a different icon for calculated columns, also show the definition of the formula and parameters in the tooltip text in the project explorer
		* Heatmap formatting for categorical data in text columns
		* When generating random numbers, allow to specify the seed number
		* Column statistics for text columns including the frequency table, bar and Pareto plots
		* Column statistics for selected cells only
		* Dropping and masking of values also for text and datetime columns
		* Data sampling (random and periodic methods)
		* Data 'flattening' - convert pivoted data to column base format
		* Column statistics (size, mean, stddev, etc.) are available in the function dialog
		* Function values dialog supports accessing arbitrary cells of columns with cell(f(index), g(column,..)) and other moving functions
		* Allow to subtract and add a value by providing a difference between two values
		* Allow to subtract a baseline
	* [matrix]
		* Zooming in the image view